# DaLe

./: Cargo.toml  README.md
crates/dale-index/: Cargo.toml
crates/dale-index/src/: idx.rs
crates/dale-macros/: Cargo.toml
crates/dale-macros/src/: lib.rs  newtype.rs
crates/dale-syn/: Cargo.toml
crates/dale-syn/examples/: RustyDL.theokey
crates/dale-syn/src/: check.rs  ctx.rs  dl_theory.lalrpop  ir.rs  lib.rs  raw_theory.rs  resolve.rs  theory.rs
crates/dale-syn/src/ir/: lower.rs  visit.rs
crates/dale-syn/src/raw_theory/: visit.rs
crates/dale-util/: Cargo.toml
crates/dale-util/src/: arena.rs  lib.rs  symbol.rs
