[package]
name = "dale-syn"
description = "Syntax for DaLe"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }
license = { workspace = true }


[dependencies]
lalrpop-util = { version = "0.22.2", features = ["lexer", "unicode"] }
dale-util = { path = "../dale-util" }
dale-macros = { path = "../dale-macros" }
dale-index = { path = "../dale-index" }
smallvec = "1.15.1"
paste = "1.0.15"
indexmap = "2.13.0"

[build-dependencies]
lalrpop = "0.22.2"
